[project]
name = "TaskingApp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "flet==0.25.1"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.alfazen"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "TaskingApp"

# company name to display in about app dialogs
company = "AlfaZen"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by AlfaZen"

[tool.flet.app]
path = "src"